Mon May 18 17:11:28 UTC 2009  Steve Huston  <shuston@riverace.com>

        * ace/UUID.cpp: Reverted:
          Mon May 18 15:33:17 UTC 2009  Steve Huston  <shuston@riverace.com>
          It breaks g++ builds. Working on another solution...

Mon May 18 15:33:17 UTC 2009  Steve Huston  <shuston@riverace.com>

        * ace/UUID.cpp: Add explicit instantiation of UUID_Generator singleton.
          Ensures the code is compiled; resolves missing extern sym on AIX.

Mon May 18 14:44:27 UTC 2009  Abdullah Sowayan  <sowayan@gmail.com>

        * bin/fuzz.pl:

          Added and enabled check_for_TAO_Local_RefCounted_Object.

Mon May 18 10:11:05  2009  Johnny Willemsen  <jwillemsen@remedy.nl>

        * ace/High_Res_Timer.cpp:
        * ace/High_Res_Timer.inl:
          Const changes

        * ace/Token.h:
          When not defined ACE_USES_WINCE_SEMA_SIMULATION use the
          semaphore implementation

Mon May 18 08:26:05  2009  Johnny Willemsen  <jwillemsen@remedy.nl>

        * ace/Countdown_Time.cpp
        * ace/Countdown_Time.h
        * ace/Countdown_Time.inl
        * ace/Makefile.am:
          Added inline file for Countdown_Time

        * ace/os_include/sys/os_time.h:
          Removed workaround for deprecated sco

Mon May 18 07:48:05  2009  Johnny Willemsen  <jwillemsen@remedy.nl>

        * ace/Condition_Recursive_Thread_Mutex.cpp:
          Const change

        * ace/OS_NS_stdio.{h,inl}:
          Removed ACE_OS::fileno(), gives problems with CE at this moment

        * ace/Recursive_Thread_Mutex.cpp (get_nesting_level):
          Disabled again for WinCE, the fact that it compiled is a bug
          in the CEGCC header files

        * ace/OS_NS_Thread.cpp:
          Bool changes

        * ace/OS_NS_stdlib.cpp:
          WinCE has ExitProcess

Mon May 18 06:45:05  2009  Johnny Willemsen  <jwillemsen@remedy.nl>

        * ace/Recursive_Thread_Mutex.cpp (get_nesting_level):
          Enabled for WinCE
